# Art_Hack_23

./: .env.sample  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  test.py
backend/: __init__.py  __main__.py
backend/config/: __init__.py  default.py  utils.py
backend/database/: __init__.py  alembic.ini
backend/endpoints/: __init__.py  auth.py  courses.py  health_check.py  task.py  user.py
backend/schemas/: __init__.py  courses.py  health_check.py  registration.py  token.py  user.py
json_placeholder_app__complete/: README.md  pubspec.yaml
json_placeholder_app__complete/lib/: main.dart
json_placeholder_app__complete/test/: post_test.dart  post_test.mocks.dart  stack_test.dart
mongo_data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--5249208052997360690.wt  collection-0-1871570621474262249.wt  collection-0-4365962127166961972.wt  collection-0-5979704721625222971.wt  collection-2-1871570621474262249.wt  collection-2-5979704721625222971.wt  collection-4-1871570621474262249.wt  collection-7-1871570621474262249.wt  index-1--5249208052997360690.wt  index-1-1871570621474262249.wt  index-1-4365962127166961972.wt  index-1-5979704721625222971.wt  index-3-1871570621474262249.wt  index-3-5979704721625222971.wt  index-5-1871570621474262249.wt  index-6-1871570621474262249.wt  index-8-1871570621474262249.wt  index-9-1871570621474262249.wt  sizeStorer.wt
mongo_data/diagnostic.data/: metrics.2023-05-27T09-57-04Z-00000  metrics.2023-05-27T09-57-10Z-00000  metrics.2023-05-27T10-01-50Z-00000  (+4 more)
test_creation_api/: Dockerfile
test_evaluation/: requirements.txt
(+127 files in other folders)
