[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["varkis <markin-2002@yandex.ru>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
passlib = "^1.7.4"
python-dotenv = "^1.0.0"
email-validator = "^1.3.1"
python-jose = "^3.3.0"
psycopg2-binary = "^2.9.6"
greenlet = "^2.0.2"
asyncpg = "^0.27.0"
uvicorn = "^0.21.1"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
redis = "^4.5.5"
motor = "^3.1.2"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
pytest = "^7.3.0"
pylint = "^2.17.2"
requests = "^2.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
